# Generative_IA_Wiki

./: README.md  api_test.py  app.py  data_gathering.py  evaluating.py  pipeline.py  query.py  rag_script.py  requirements.txt  setup.sh  training.py
small_interface/: Cargo.toml  index.html  styles.scss
small_interface/src/: main.rs
