[package]
name = "small_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
reqwest = { version= "0.12.9" , features = ["json"] }
serde = "1.0.216"
serde_json = "1.0.133"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"

